<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hamburguer"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.blbbb.blbb.activity.BarActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#bbffffff"
        android:orientation="vertical"
        android:padding="5dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBarMesa"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/mesa" />

                <Spinner
                    android:id="@+id/spMainMesa"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:dropDownWidth="match_parent"
                    android:spinnerMode="dialog" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btBarCardapio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/estilo_botao"
                    android:onClick="eventBarCardapio"
                    android:text="@string/card_pio" />
            </TableRow>

            <!--<TableRow-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent">-->

            <!--<Button-->
            <!--android:id="@+id/btBarAtualizar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/estilo_botao"-->
            <!--android:onClick="eventBarAtualizar"-->
            <!--android:text="LISTA ITENS DA MESA" />-->
            <!--</TableRow>-->

        </TableLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/itens_pedidos" />


        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:id="@+id/swipeContainer"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/lvBarPedidosFeitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
</RelativeLayout>
